force-app/main/default/objects/AC_Technician__c/AC_Technician__c.object-meta.xml
<CustomObject>
    <description>Holds the definition of a service provider</description>
    <label>AC Technician</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Technician Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>