force-app/main/default/objects/AC_Technician__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Technicians</relationshipLabel>
    <relationshipName>Technicians</relationshipName>
    <type>Lookup</type>
</CustomField>