force-app/main/default/objects/AC_Technician__c/fields/Home_City__c.field-meta.xml
<CustomField>
    <fullName>Home_City__c</fullName>
    <label>Home City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>