force-app/main/default/objects/AC_Technician__c/fields/Home_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Postal_Code__c</fullName>
    <label>Home Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>