force-app/main/default/objects/AC_Technician__c/fields/Home_State__c.field-meta.xml
<CustomField>
    <fullName>Home_State__c</fullName>
    <label>Home State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>