force-app/main/default/objects/AC_Technician__c/listViews/AllTechs.listView-meta.xml
<ListView>
    <fullName>AllTechs</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Home_Address__c</columns>
    <columns>Home_City__c</columns>
    <columns>Home_State__c</columns>
    <columns>Home_Postal_Code__c</columns>
    <columns>Home_Location__Latitude__s</columns>
    <columns>Home_Location__Longitude__s</columns>
    <filterScope>Everything</filterScope>
    <label>AllTechs</label>
</ListView>